--- a/client/src/styles/dashboard.css
+++ b/client/src/styles/dashboard.css
@@ -490,7 +490,6 @@ body.dark .content main .home-side-panel > div {
 
 .content main .home-side-panel .header h3{
     margin-right: auto;
-    font-size: 24px;
     font-weight: 600;
 }
 
